Mon Feb  8 21:53:37 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in: Enable the ccapi directory for windows builds.  

	* ccdefops.c: Make the ccapi the default ccache type for Windows
		machines.

1999-01-26  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Add ccapi to the include path so we can find stdcc.h

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Sat Dec  5 01:20:31 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in, ccdefops.c: Temporarily back out the ccapi ccache
		under Windows so we can make sure the rest of the krb5
		tree builds correctly under Windows.  (Note: I didn't
		revert lib/krb5/os/ccdefname.c, so setting KRB5_CC_NAME to
		FILE:C:\tmp\tkt is required to make things work.)

1998-08-24  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Add windows build instructions to build CCache API
		Cache implementation. 

Fri Aug 20 18:30:00 1998  Miro Jurisic  <meeroh@mit.edu>
	* Added Frank's CCache API cache implementation and made
		it default on the Mac

Thu Jul 30 13:12:30 1998  Sam Hartman  <hartmans@utwig.mesas.com>

	* ccbase.c: Enable memory ccache (merge adapted from Kerbnet)

1998-05-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Add ccache/memory as a directory to be recursively
		built by this makefile under Windows.

Fri Feb 27 18:03:33 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Changed thisconfigdir to point at the lib/krb5
 		directory, since we've moved the configure.in tests in
 		this directory to the toplevel lib/krb5 configure.in

Wed Feb 18 16:19:12 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Thu Feb 12 16:17:46 1998  Tom Yu  <tlyu@mit.edu>

	* configure.in: Add commented out AC_OUTPUT to force autoreconf to
	rebuild the configure script.
